--- a/ExperimentalSwift/Info.plist
+++ b/ExperimentalSwift/Info.plist
@@ -2,16 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>UIAppFonts</key>
-    <array>
-        <string>Mada-ExtraLight.otf</string>
-        <string>Mada-Light.otf</string>
-        <string>Mada-Medium.otf</string>
-        <string>Mada-Regular.otf</string>
-        <string>Mada-SemiBold.otf</string>
-        <string>Mada-Bold.otf</string>
-        <string>Mada-Black.otf</string>
-    </array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -30,6 +20,21 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Mada-ExtraLight.otf</string>
+		<string>Mada-Light.otf</string>
+		<string>Mada-Medium.otf</string>
+		<string>Mada-Regular.otf</string>
+		<string>Mada-SemiBold.otf</string>
+		<string>Mada-Bold.otf</string>
+		<string>Mada-Black.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,12 +46,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key><true/>
-    </dict>
 </dict>
 </plist>
